--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
         <meta charset="UTF-8" />
         <title>Awesome MP3 Player</title>
         <link rel="shortcut icon" type="image/x-icon" href="./images/icon.png" />
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css" />
         <script src="./scripts/player.js"></script>
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
-        <div id="songs">
-            <!-- Generated songs go here -->
-        </div>
-        <div id="playlists">
-            <!-- Generated playlists go here -->
-        </div>
+        <h1>Gabby's Mp3 Player</h1>
+        <div id="songs"></div>
+        <div id="playlists"></div>
     </body>
 </html>
