--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                         <li><a class="nav-link" onclick="playlistsHandler()">playlists</a></li>
                     </ul>
                 </nav>
+                <div id="playNow" style="position: absolute; bottom: 0px; width:100%; text-align: center;">
+                    <header>Playing Now</header>
+                </div>
             </div>
             <div id = "main-content">
                 <div id="songs" class = "main-content">
