--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
+        <h1>Mp3 Task</h1>
         <div id="songs">
             <!-- Generated songs go here -->
         </div>
