Added createPlaylistElement function

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     </head>
     <body>
         <h1>Mp3 Task</h1>
+        <h2>SINGLE SONGS</h2>
         <div id="songs">
             <!-- Generated songs go here -->
         </div>
+        <h2>PLAYLISTS</h2>
         <div id="playlists">
             <!-- Generated playlists go here -->
         </div>
