add css layout structure for bottom bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./scripts/player.js"></script>
     <script src="./scripts/index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,24 +23,24 @@
     <div class="bar">
         <div class="bar-left">
             <div class="bar-title">
-
+                <p class="song-details">song title</p>
             </div>
             <div class="bar-artist">
-
+                <p class="song-details">artist</p>
             </div>
             <div class="bar-album">
-
+                <p class="song-details">album</p>
             </div>
         </div>
         <div class="bar-middle">
             <div class="bar-buttons">
-                <button class="backwards-button"></button>
-                <button class="play-pause"></button>
-                <button class="forward-button"></button>
+                <button class="control-button backwards-button"></button>
+                <button class="control-button play-pause"></button>
+                <button class="control-button forward-button"></button>
             </div>
             <div class="bar-timebar">
                 <span class="time-start"></span>
-                <span class="timebar"></span>
+                <span class="progressbar"></span>
                 <span class="time-end"></span>
             </div>
         </div>
