add css layout for bottom bar

--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
                 </button>
             </div>
             <div class="bar-timebar">
-                <span class="time-start"></span>
+                <span class="time-mark time-start">00:00</span>
                 <span class="progressbar"></span>
-                <span class="time-end"></span>
+                <span class="time-mark time-end">05:23</span>
             </div>
         </div>
         <div class="bar-right">
+            <span class="volume-icon"><i class="fas fa-volume-up"></i></span>
             <span class="volume-slider"></span>
         </div>
     </div>
