add class for song info in bottom bar

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     </div>
     <div class="bar">
         <div class="bar-left">
-            <div class="bar-title">
-                <p class="song-details">song title</p>
+            <div class="bar-song-description bar-title">
+                <p class=" song-details">song title</p>
             </div>
-            <div class="bar-artist">
-                <p class="song-details">artist</p>
+            <div class="bar-song-description bar-artist">
+                <p class=" song-details">artist</p>
             </div>
-            <div class="bar-album">
-                <p class="song-details">album</p>
+            <div class="bar-song-description bar-album">
+                <p class=" song-details">album</p>
             </div>
         </div>
         <div class="bar-middle">
