--- a/index.html
+++ b/index.html
@@ -31,12 +31,35 @@
         </section>
     </aside>
 
-    <div id="songs">
-        <!-- Generated songs go here -->
-    </div>
+    <section class="my-songs">
+        <div class="page-title-container">
+            <h1 class="page-title">my songs</h1>
+        </div>
+        <div class="songs-container">
+
+            <div id="songs">
+                <!-- Generated songs go here -->
+        
+            
+            </div>
+
+
+        </div>
+
+    </section>
+
+
     <div id="playlists">
         <!-- Generated playlists go here -->
+        <!-- first were gonna make a static example code, then add it with dom manipulation. -->
+
+
+
     </div>
+
+
+
+</div>
     <div class="bar">
         <div class="bar-left">
             <div class="bar-song-description bar-title">
