--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
+        <div id="main"></div>
         <div id="songs">
             <!-- Generated songs go here -->
+            <div id="songsTop"></div>
         </div>
         <div id="playlists">
             <!-- Generated playlists go here -->
