add song-data-container css and html

--- a/index.html
+++ b/index.html
@@ -35,30 +35,35 @@
         <div class="page-title-container">
             <h1 class="page-title">my songs</h1>
         </div>
-        <div class="songs-container">
-
             <div id="songs">
                 <!-- Generated songs go here -->
-        
-            
+                <!-- EXAMPLE -->
+                <div class="song-data-container">
+                    <span class="album-img">
+                        <img src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
+                    <span class="song-title">Whoah</span>
+                    <span class="song-album">Vortex</span>
+                    <span class="song-artist">Jinjer</span>
+                    <span class="song-duration">05:32</span>
+                </div>
+                <div class="song-data-container">
+                    <span class="album-img">
+                        <img src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
+                    <span class="song-title">Whoah</span>
+                    <span class="song-album">Vortex</span>
+                    <span class="song-artist">Jinjer</span>
+                    <span class="song-duration">05:32</span>
+                </div>
+
+
+                <!-- END EXAMPLE -->    
             </div>
-
-
-        </div>
-
     </section>
-
 
     <div id="playlists">
         <!-- Generated playlists go here -->
         <!-- first were gonna make a static example code, then add it with dom manipulation. -->
-
-
-
     </div>
-
-
-
 </div>
     <div class="bar">
         <div class="bar-left">
