add playlist section css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
     </aside>
 
-    <section class="my-songs">
+    <section class="my-songs page-section hide-section">
         <div class="page-title-container">
             <h1 class="page-title">my songs</h1>
         </div>
@@ -69,10 +69,54 @@
             </div>
     </section>
 
-    <div id="playlists">
-        <!-- Generated playlists go here -->
-        <!-- first were gonna make a static example code, then add it with dom manipulation. -->
-    </div>
+    <!-- START MY PLAYLIST SECTION -->
+    <section class="my-playlists page-section">
+        <div class="page-title-container">
+            <h1 class="page-title">my playlists</h1>
+        </div>
+        <div id="playlists">
+            <!-- Generated playlists go here -->
+            <!-- first were gonna make a static example code, then add it with dom manipulation. -->
+            <div class="playlist-card">
+                <div class="card card-album-img-container">
+                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
+                </div>
+                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
+                <div class="card card-playlist-duration"><p>45:52</p> </div>
+            </div>
+
+            <div class="playlist-card">
+                <div class="card card-album-img-container">
+                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
+                </div>
+                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
+                <div class="card card-playlist-duration"><p>45:52</p> </div>
+            </div>
+            <div class="playlist-card">
+                <div class="card card-album-img-container">
+                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
+                </div>
+                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
+                <div class="card card-playlist-duration"><p>45:52</p> </div>
+            </div>
+            <div class="playlist-card">
+                <div class="card card-album-img-container">
+                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
+                </div>
+                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
+                <div class="card card-playlist-duration"><p>45:52</p> </div>
+            </div>
+            <div class="playlist-card">
+                <div class="card card-album-img-container">
+                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
+                </div>
+                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
+                <div class="card card-playlist-duration"><p>45:52</p> </div>
+            </div>
+
+
+        </div>
+    </section>
 </div>
     <div class="bar">
         <div class="bar-left">
