add playSong function

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         </div>
     </section>
 </div>
+
+<!-- START BOTTOM BAR -->
     <div class="bar">
         <div class="bar-left">
             <div class="bar-song-description bar-title">
