--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>playlists</p>
         </section>
         <section class="sidebar-album-cover">
-            <img class="sidebar-pic" src="./images/cover_art/acdc_thunderstruck.jpg" alt="">
+            <img class="sidebar-pic" src="" alt="">
         </section>
     </aside>
 
@@ -38,36 +38,10 @@
             <div id="songs">
                 <!-- Generated songs go here -->
                 <!-- EXAMPLE -->
-                <div class="song-data-container">
-                    <span class="data-cell album-img-container">
-                        <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
-                    <span class="data-cell song-title">Whoah</span>
-                    <span class="data-cell song-album">Vortex</span>
-                    <span class="data-cell song-artist">Jinjer</span>
-                    <span class="data-cell song-duration">05:32</span>
-                </div>
-                <div class="song-data-container">
-                    <span class="data-cell album-img-container">
-                        <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
-                    <span class="data-cell song-title">Harbana</span>
-                    <span class="data-cell song-album">Janana</span>
-                    <span class="data-cell song-artist">alahumbre and the fucking toasters</span>
-                    <span class="data-cell song-duration">02:32</span>
-                </div>
-                <div class="song-data-container">
-                    <span class="data-cell album-img-container">
-                        <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
-                    <span class="data-cell song-title">Disastorous Cum Monster of Spain</span>
-                    <span class="data-cell song-album">Shlokim in hell</span>
-                    <span class="data-cell song-artist">Sababnanuts</span>
-                    <span class="data-cell song-duration">66:32</span>
-                </div>
-
-
-
                 <!-- END EXAMPLE -->    
             </div>
     </section>
+
 
     <!-- START MY PLAYLIST SECTION -->
     <section class="my-playlists page-section">
@@ -76,45 +50,6 @@
         </div>
         <div id="playlists">
             <!-- Generated playlists go here -->
-            <!-- first were gonna make a static example code, then add it with dom manipulation. -->
-            <div class="playlist-card">
-                <div class="card card-album-img-container">
-                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
-                </div>
-                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
-                <div class="card card-playlist-duration"><p>45:52</p> </div>
-            </div>
-
-            <div class="playlist-card">
-                <div class="card card-album-img-container">
-                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
-                </div>
-                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
-                <div class="card card-playlist-duration"><p>45:52</p> </div>
-            </div>
-            <div class="playlist-card">
-                <div class="card card-album-img-container">
-                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
-                </div>
-                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
-                <div class="card card-playlist-duration"><p>45:52</p> </div>
-            </div>
-            <div class="playlist-card">
-                <div class="card card-album-img-container">
-                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
-                </div>
-                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
-                <div class="card card-playlist-duration"><p>45:52</p> </div>
-            </div>
-            <div class="playlist-card">
-                <div class="card card-album-img-container">
-                    <img class="card-album-img" src="images/cover_art/orphaned_land_all_is_one.jpg" alt="">
-                </div>
-                <div class="card card-playlist-info"> <p>metal | 5 songs</p> </div>
-                <div class="card card-playlist-duration"><p>45:52</p> </div>
-            </div>
-
-
         </div>
     </section>
 </div>
