add createSongElement functionallity

--- a/testindex.html
+++ b/testindex.html
@@ -39,30 +39,21 @@
             <!-- Generated songs go here -->
             <!-- EXAMPLE -->
             <div class="song-data-container">
-                <span class="data-cell album-img-container">
-                    <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
-                <span class="data-cell song-title">Whoah</span>
-                <span class="data-cell song-album">Vortex</span>
-                <span class="data-cell song-artist">Jinjer</span>
-                <span class="data-cell song-duration">05:32</span>
-            </div>
-            <div class="song-data-container">
-                <span class="data-cell album-img-container">
-                    <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
-                <span class="data-cell song-title">Harbana</span>
-                <span class="data-cell song-album">Janana</span>
-                <span class="data-cell song-artist">alahumbre and the fucking toasters</span>
-                <span class="data-cell song-duration">02:32</span>
-            </div>
-            <div class="song-data-container">
-                <span class="data-cell album-img-container">
-                    <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> </span>
-                <span class="data-cell song-title">Disastorous Cum Monster of Spain</span>
-                <span class="data-cell song-album">Shlokim in hell</span>
-                <span class="data-cell song-artist">Sababnanuts</span>
-                <span class="data-cell song-duration">66:32</span>
-            </div>
 
+                <span class="data-cell album-img-container">
+                    <img class="album-img" src="images/cover_art/jinjer_vortex.jpg" alt=""> 
+                </span>
+
+                <span class="data-cell song-title">Whoah</span>
+
+                <span class="data-cell song-album">Vortex</span>
+
+                <span class="data-cell song-artist">Jinjer</span>
+
+                <span class="data-cell song-duration">05:32</span>
+                
+            </div>
+            
 
 
             <!-- END EXAMPLE -->
