build function renderLists

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
     </aside>
 
-    <section class="my-songs page-section hide-section">
+    <section class="my-songs page-section ">
         <div class="page-title-container">
             <h1 class="page-title">my songs</h1>
         </div>
@@ -44,7 +44,7 @@
 
 
     <!-- START MY PLAYLIST SECTION -->
-    <section class="my-playlists page-section">
+    <section class="my-playlists page-section hide-section">
         <div class="page-title-container">
             <h1 class="page-title">my playlists</h1>
         </div>
