--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
     <aside class="sidebar">
         <section class="sidebar-item">
-            <p>songs</p>
+            <p  onclick="showSongs()">songs</p>
         </section>
         <section class="sidebar-item">
-            <p>playlists</p>
+            <p  onclick="showPlaylists()">playlists</p>
         </section>
         <section class="sidebar-album-cover">
             <img class="sidebar-pic" src="" alt="">
         </section>
     </aside>
 
-    <section class="my-songs page-section ">
+    <section id="songs-section" class="my-songs page-section ">
         <div class="page-title-container">
             <h1 class="page-title">my songs</h1>
         </div>
@@ -44,7 +44,7 @@
 
 
     <!-- START MY PLAYLIST SECTION -->
-    <section class="my-playlists page-section hide-section">
+    <section id="playlists-section" class="my-playlists page-section hide-section">
         <div class="page-title-container">
             <h1 class="page-title">my playlists</h1>
         </div>
