--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
             <img class="sidebar-pic" src="" alt="">
         </section>
     </aside>
-
+    
+    <!-- START MY SONGS SECTION -->
     <section id="songs-section" class="my-songs page-section ">
         <div class="page-title-container">
             <h1 class="page-title">my songs</h1>
         </div>
             <div id="songs">
-                <!-- Generated songs go here -->
-                <!-- EXAMPLE -->
-                <!-- END EXAMPLE -->    
+                <!-- Generated songs go here -->  
             </div>
     </section>
 
