--- a/index.new.html
+++ b/index.new.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Awesome Player!!!</h1>
+        <div id="main"></div>
         <div id="add-section">
             <h2>Add a new song</h2>
             <div id="inputs">
