add a title and center the content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
+        <div class= "webTitle"> mp3 song player</div>
         <div id="songs">
+            <span class= "box"></span>
             <!-- Generated songs go here -->
         </div>
         <div id="playlists">
