--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
+        <div id="currently-playing"></div>
+        
         <div id="songs">
             <!-- Generated songs go here -->
         </div>
