--- a/index.new.html
+++ b/index.new.html
@@ -6,7 +6,9 @@
         <link rel="shortcut icon" type="image/x-icon" href="./images/icon.png" />
         <link rel="stylesheet" href="./style.css">
         <script src="./scripts/player.js"></script>
+        <!-- <script src="./scripts/index.js" defer></script> -->
         <script src="./scripts/index.new.js" defer></script>
+        
     </head>
     <body>
         <h1>Awesome Player!!!</h1>
