--- a/index.new.html
+++ b/index.new.html
@@ -24,7 +24,7 @@
         </div>
         <div id="songs">
             <h2>Songs</h2>
-            <div class="list">
+            <div id = "songsList" class="list">
                 <!-- <div class="song">
                     <div class="left">
                         <img class="cover-art" src="./images/cover_art/jinjer_vortex.jpg">
