--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="./scripts/player.js"></script>
         <script src="./scripts/index.js" defer></script>
     </head>
-    <body>
+    <body id="body">
         <div id="songs">
             <!-- Generated songs go here -->
         </div>
