--- a/index.new.html
+++ b/index.new.html
@@ -24,7 +24,7 @@
         <div id="songs">
             <h2>Songs</h2>
             <div class="list">
-                <!-- <div class="song">
+                <div class="song">
                     <div class="left">
                         <img class="cover-art" src="./images/cover_art/jinjer_vortex.jpg">
                         <div class="song-details">
@@ -40,13 +40,13 @@
                             <button class="remove-button">Remove</button>
                         </div>
                     </div>
-                </div> -->
+                </div> 
             </div>
         </div>
         <div id="playlists">
             <h2>Playlists</h2>
             <div class="list">
-                <!-- <div class="playlist">
+                <div class="playlist">
                     <div class="left">
                         <span class="name">Metal</span>
                     </div>
@@ -54,7 +54,7 @@
                         <span class="playlist-length">4 songs</span>
                         <span class="playlist-duration">25:36</span>
                     </div>
-                </div> -->
+                </div> 
             </div>
         </div>
     </body>
