--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
                                 <li><a class="nav-link" onclick ="addSongHandler()">add song</a></li>
                             </ul>
                         </li>
-                        <li><a class="nav-link" onclick="playlistsHandler()">playlists</a></li>
+                        <li>
+                            <a class="nav-link" onclick="playlistsHandler()">playlists</a>
+                            <ul>
+                                <li><a class="nav-link" onclick ="addSongToPlaylist()">add song to playlist</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
                 <div id="playNow" style="position: absolute; bottom: 0px; width:100%; text-align: center;">
