added bounus ex

--- a/index.new.html
+++ b/index.new.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <h1>Awesome Player!!!</h1>
-        <div id="main"></div>
+        <div id="main">
+            <h1>MP3</h1>
+        </div>
         <div id="add-section">
             <h2>Add a new song</h2>
             <div id="inputs">
@@ -46,7 +48,7 @@
         </div>
         <div id="playlists">
             <h2>Playlists</h2>
-            <div class="list">
+            <div id="playlistsList" class="list">
                 <!-- <div class="playlist">
                     <div class="left">
                         <span class="name">Metal</span>
