--- a/index.new.html
+++ b/index.new.html
@@ -23,39 +23,13 @@
         </div>
         <div id="songs">
             <h2>Songs</h2>
-            <div class="list">
-                <!-- <div class="song">
-                    <div class="left">
-                        <img class="cover-art" src="./images/cover_art/jinjer_vortex.jpg">
-                        <div class="song-details">
-                            <span class="title">Vortex</span>
-                            <span class="album">Wallflowers</span>
-                            <span class="artist">Jinjer</span>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="song-duration">04:02</div>
-                        <div class="song-actions">
-                            <button class="play-button">Play</button>
-                            <button class="remove-button">Remove</button>
-                        </div>
-                    </div>
-                </div> -->
+            <h5>Currently Playing:</h5>
+            <h5 id='current-song'></h5>
+            <div class="list" id="song-list">
             </div>
         </div>
         <div id="playlists">
             <h2>Playlists</h2>
-            <div class="list">
-                <!-- <div class="playlist">
-                    <div class="left">
-                        <span class="name">Metal</span>
-                    </div>
-                    <div class="right">
-                        <span class="playlist-length">4 songs</span>
-                        <span class="playlist-duration">25:36</span>
-                    </div>
-                </div> -->
-            </div>
         </div>
     </body>
 </html>
