--- a/index.new.html
+++ b/index.new.html
@@ -5,10 +5,11 @@
         <title>Awesome MP3 Player</title>
         <link rel="shortcut icon" type="image/x-icon" href="./images/icon.png" />
         <link rel="stylesheet" href="./style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <script src="./scripts/player.js"></script>
         <script src="./scripts/index.new.js" defer></script>
     </head>
-    <body>
+    <body style="background-color: bisque;">
         <h1>Awesome Player!!!</h1>
         <div id="main">
             <h1>MP3</h1>
@@ -16,13 +17,13 @@
         <div id="add-section">
             <h2>Add a new song</h2>
             <div id="inputs">
-                <input name="title" placeholder="Title">
-                <input name="album" placeholder="Album">
-                <input name="artist" placeholder="Artist">
-                <input name="duration" placeholder="Duration (mm:ss)">
-                <input name="cover-art" placeholder="Cover art link">
+                <input class="form-control m-5 w-50" name="title" placeholder="Title">
+                <input class="form-control m-5 w-50" name="album" placeholder="Album">
+                <input class="form-control m-5 w-50" name="artist" placeholder="Artist">
+                <input class="form-control m-5 w-50" name="duration" placeholder="Duration (mm:ss)">
+                <input class="form-control m-5 w-50"name="cover-art" placeholder="Cover art link">
             </div>
-            <button id="add-button">Add</button>
+            <button class="btn m-2 w-10 btn-outline-secondary" id="add-button">ADD</button>
         </div>
         <div id="songs">
             <h2>Songs</h2>
