addSong handler and eventlistener complete
other functions to help- mmss to sec, checkduration, generate newsong id

--- a/index.new.html
+++ b/index.new.html
@@ -13,11 +13,11 @@
         <div id="add-section">
             <h2>Add a new song</h2>
             <div id="inputs">
-                <input name="title" placeholder="Title">
-                <input name="album" placeholder="Album">
-                <input name="artist" placeholder="Artist">
-                <input name="duration" placeholder="Duration (mm:ss)">
-                <input name="cover-art" placeholder="Cover art link">
+                <input name="title" placeholder="Title" id= "title">
+                <input name="album" placeholder="Album" id= "album">
+                <input name="artist" placeholder="Artist" id= "artist">
+                <input name="duration" placeholder="Duration (mm:ss)" id= "duration">
+                <input name="cover-art" placeholder="Cover art link" id= "cover-art">
             </div>
             <button id="add-button">Add</button>
         </div>
