--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
+        <h1>New MP3 Player</h1>
         <div id="songs">
-            <!-- Generated songs go here -->
+            
         </div>
+        <h2>Playlists</h2>
         <div id="playlists">
             <!-- Generated playlists go here -->
         </div>
     </body>
+</html>
