--- a/index.new.html
+++ b/index.new.html
@@ -9,7 +9,7 @@
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
-        <h1>Awesome Player!!!</h1>
+        <h1>New Mp3 Player</h1>
         <div id="add-section">
             <h2>Add a new song</h2>
             <div id="inputs">
