--- a/index.new.html
+++ b/index.new.html
@@ -13,47 +13,22 @@
         <div id="add-section">
             <h2>Add a new song</h2>
             <div id="inputs">
-                <input name="title" placeholder="Title">
-                <input name="album" placeholder="Album">
-                <input name="artist" placeholder="Artist">
-                <input name="duration" placeholder="Duration (mm:ss)">
+                <input name="title" placeholder="Title"><br>
+                <input name="album" placeholder="Album"><br>
+                <input name="artist" placeholder="Artist"><br>
+                <input name="duration" placeholder="duration (mm:ss)"><br>
                 <input name="cover-art" placeholder="Cover art link">
             </div>
             <button id="add-button">Add</button>
         </div>
         <div id="songs">
             <div class="list">
-                <!-- <div class="song">
-                    <div class="left">
-                        <img class="cover-art" src="./images/cover_art/jinjer_vortex.jpg">
-                        <div class="song-details">
-                            <span class="title">Vortex</span>
-                            <span class="album">Wallflowers</span>
-                            <span class="artist">Jinjer</span>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="song-duration">04:02</div>
-                        <div class="song-actions">
-                            <button class="play-button">Play</button>
-                            <button class="remove-button">Remove</button>
-                        </div>
-                    </div>
-                </div> -->
+                </div> 
             </div>
         </div>
         <div id="playlists">
             <h2>Playlists</h2>
             <div class="list">
-                <!-- <div class="playlist">
-                    <div class="left">
-                        <span class="name">Metal</span>
-                    </div>
-                    <div class="right">
-                        <span class="playlist-length">4 songs</span>
-                        <span class="playlist-duration">25:36</span>
-                    </div>
-                </div> -->
             </div>
         </div>
     </body>
