added playsong and removesong function
-made a common handler for both removesong and playsong with the distinction of each button doing something else

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id='songs' class='songs'>
       <!-- Generated songs go here -->
     </div>
-    <div id='playlists' songs='playlists'>
+    <div id='playlists' class='playlists'>
       <!-- Generated playlists go here -->
     </div>
   </div>
