--- a/index.new.html
+++ b/index.new.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Awesome MP3 Player</title>
-        <link rel="shortcut icon" type="image/x-icon" href="./images/icon.png" />
-        <link rel="stylesheet" href="./style.css">
-        <script src="./scripts/player.js"></script>
-        <script src="./scripts/index.new.js" defer></script>
-    </head>
-    <body>
-        <h1>Awesome Player!!!</h1>
-        <div id="add-section">
-            <h2>Add a new song</h2>
-            <div id="inputs">
-                <input name="title" placeholder="Title">
-                <input name="album" placeholder="Album">
-                <input name="artist" placeholder="Artist">
-                <input name="duration" placeholder="Duration (mm:ss)">
-                <input name="cover-art" placeholder="Cover art link">
-            </div>
-            <button id="add-button">Add</button>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Awesome MP3 Player</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/icon.png" />
+    <link rel="stylesheet" href="./style.css">
+    <script src="./scripts/player.js"></script>
+    <script src="./scripts/index.new.js" defer></script>
+</head>
+
+<body>
+    <h1>Awesome Player!!!</h1>
+    <div id="add-section">
+        <h2>Add a new song</h2>
+        <div id="inputs">
+            <input class='input' name="title" placeholder="Title">
+            <input class='input' name="album" placeholder="Album">
+            <input class='input' name="artist" placeholder="Artist">
+            <input class='input' name="duration" placeholder="Duration (mm:ss)">
+            <input class='input' name="cover-art" placeholder="Cover art link">
         </div>
-        <div id="songs">
-            <h2>Songs</h2>
-            <div class="list">
-                <!-- <div class="song">
+        <button id="add-button">Add</button>
+    </div>
+    <h2>Songs</h2>
+    <div class="list">
+        <!-- <div class="song">
                     <div class="left">
                         <img class="cover-art" src="./images/cover_art/jinjer_vortex.jpg">
                         <div class="song-details">
@@ -41,12 +42,13 @@
                         </div>
                     </div>
                 </div> -->
-            </div>
-        </div>
-        <div id="playlists">
-            <h2>Playlists</h2>
-            <div class="list">
-                <!-- <div class="playlist">
+    </div>
+    </div>
+    <div id="songs" class='songs'></div>
+    <div id="playlists" class='playlists'>
+        <h2>Playlists</h2>
+        <div class="list">
+            <!-- <div class="playlist">
                     <div class="left">
                         <span class="name">Metal</span>
                     </div>
@@ -55,7 +57,8 @@
                         <span class="playlist-duration">25:36</span>
                     </div>
                 </div> -->
-            </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
